--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-head": "^3.4.2",
     "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
